// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MTO SolutionCard Component > renders correctly and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="desktop:grid-col-9 display-flex"
    data-testid="grid"
  >
    <li
      class="usa-card width-full"
      data-testid="Card"
    >
      <div
        class="usa-card__container padding-3 flex-justify radius-md shadow-2 margin-0"
      >
        <p
          class="margin-top-0 margin-bottom-05 text-base-dark"
        >
          IT System
        </p>
        <h3
          class="margin-0"
        >
          4innovation
        </h3>
        <p
          class="margin-top-0"
        >
          4i
        </p>
        <div
          class="border-top border-base-light padding-top-2"
        >
          <button
            class="usa-button usa-button--unstyled"
            data-testid="button"
            type="button"
          >
            About this solution
          </button>
        </div>
      </div>
    </li>
  </div>
</DocumentFragment>
`;

exports[`MilestonePanel Component > renders correctly and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="grid-container padding-8"
    data-testid="gridContainer"
  >
    <div
      class="grid-row"
      data-testid="grid"
    >
      <div
        class="grid-col-12"
        data-testid="grid"
      >
        <div
          class="margin-bottom-4"
        >
          <span
            class="padding-right-1 model-to-operations__milestone-tag padding-y-05"
          >
            <svg
              class="usa-icon margin-left-1"
              focusable="false"
              height="1em"
              role="img"
              style="top: 2px;"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 21c0 .55.45 1 1 1h4c.55 0 1-.45 1-1v-1H9v1zm3-19C8.14 2 5 5.14 5 9c0 2.38 1.19 4.47 3 5.74V17c0 .55.45 1 1 1h6c.55 0 1-.45 1-1v-2.26c1.81-1.27 3-3.36 3-5.74 0-3.86-3.14-7-7-7zm2 11.7V16h-4v-2.3C8.48 12.63 7 11.53 7 9c0-2.76 2.24-5 5-5s5 2.24 5 5c0 2.49-1.51 3.65-3 4.7z"
              />
            </svg>
             Suggested
          </span>
        </div>
        <h2
          class="margin-y-2 line-height-large"
        >
          Test Milestone
        </h2>
        <p
          class="text-base-dark margin-top-0 margin-bottom-2"
        >
          Category: Test Category  (Test SubCategory)
        </p>
        <p>
          Advertise the opportunity to bid on work related to evaluating a model, review the bids and select evaluation contractor.
        </p>
        <p
          class="text-base-dark margin-top-0 margin-bottom-4"
        >
          Facilitated by: Application support contractor
        </p>
        <div
          class="padding-bottom-6 margin-bottom-4 border-bottom border-base-light"
        >
          <button
            class="usa-button usa-button--outline margin-right-2"
            data-testid="button"
            type="button"
          >
            Add to matrix
          </button>
        </div>
        <h3
          class="margin-y-2"
        >
          Common solutions
        </h3>
        <div
          class="desktop:grid-col-9 display-flex"
          data-testid="grid"
        >
          <li
            class="usa-card width-full"
            data-testid="Card"
          >
            <div
              class="usa-card__container padding-3 flex-justify radius-md shadow-2 margin-0"
            >
              <p
                class="margin-top-0 margin-bottom-05 text-base-dark"
              >
                IT System
              </p>
              <h3
                class="margin-0"
              >
                Accountable Care Organization - Operational System
              </h3>
              <p
                class="margin-top-0"
              >
                ACO-OS
              </p>
              <div
                class="border-top border-base-light padding-top-2"
              >
                <button
                  class="usa-button usa-button--unstyled"
                  data-testid="button"
                  type="button"
                >
                  About this solution
                </button>
              </div>
            </div>
          </li>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
